[package]
name = "game_engine"
version = "0.1.5"
authors = ["Mathias Danielsen <mathais234@gmail.com>"]

[dependencies]
glium = {version="*"}
tobj = "0.1.6"
nalgebra = "0.16"
nphysics3d = "0.9"
ncollide3d = "0.17"
stopwatch = "0.0.7"
image = "*"
colored = "*"
rusttype = "*"
rand = "*"
binary_rw = "*"